# Juniper-Switch-Docu-Crawler

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  cisco_crawler.py  juniper_crawler.py  juniper_parser.py  juniper_report_generator.py  juniper_run.bat  juniper_run.ps1  juniper_run.sh  oui_lookup.py  parser.py  pyproject.toml  report_generator.py  requirements.txt  run.bat  run.ps1  run.sh  test_juniper_parser.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.jules/: sentinel.md
