[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build-meta"

[project]
name = "juniper-switch-docu-crawler"
version = "1.0.0"
description = "A discovery, documentation, and migration state baseline tool for Juniper Junos networks"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "AGPL-3.0" }
dependencies = [
    "netmiko>=4.3.0",
    "netaddr>=1.3.0",
]

[project.scripts]
juniper-crawler = "juniper_crawler:main"

[tool.setuptools]
py-modules = ["juniper_crawler", "juniper_parser", "juniper_report_generator", "oui_lookup"]
